[tool.poetry]
name = "atzlib"
version = "0.1.1"
description = "My python codes."
authors = ["jhlee29 <leejinha829@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"